syncroot/base/preinvoicingsystem/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: preinvoicingsystem
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: preinvoicingsystem
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
